# bitrev

./: Cargo.toml  README.md
benches/: criterion_bench.rs  iai_cg_bench.rs  my_bench.rs
src/: lib.rs
